k8s/service-spring.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: web-spring-boot
