k8s/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /task
        pathType: Prefix
        backend:
          service:
            name: spring-boot.ingress-nginx.svc.cluster.local
            port: 
              number: 8080
